# ECE489

./: .gitignore  README.md
pympc-quadruped/: .gitignore  AGENTS.md  EXPERIMENT_COMPLETE.md  FIXES_SUMMARY.md  MUJOCO_LOG.TXT  QUICK_TEST.md  README.md  pyproject.toml  requirements.txt  run.md  test_cpg.sh  z_总结.md
pympc-quadruped/config/: go2_mpc_configs.py  linear_mpc_configs.py  robot_configs.py
pympc-quadruped/doc/: MPC_评估汇总.md  add_slope_terrain_guide.md  aliengo_go2_comparison.md  aliengo_go2_damping_imu_analysis.md  code_architecture.md  condim_explanation.md  cot_analysis_and_robustness.md  experiment_mpc_vs_cpg_guide.md  experiment_results_summary.md  fix_robot_tilt.md  friction_collision_comparison.md  friction_parameter_correction.md  gait_comparison.csv  go2_detailed_data_comparison.md  go2_joint_limits_fix.md  go2_mpc_problem_analysis_and_fix.md  go2_stability_fixes.md  go2_trotting_eval.csv  how_to_record_metrics.md  joint_range_comparison.md  mpc_aliengo_eval_results.csv  mpc_eval_results.csv  mpc_go2_eval_results.csv  parameter_sweep_video_guide.md  pd_tuning_guide.md  push_test_demo_guide.md  push_test_go2_results.csv  robot_go2_complete_update_report.md  robot_go2_friction_update_final.md  sensor_analysis.md  trajectory_visualization_guide.md  unitree_aliengo_package_creation.md  visualization_update_summary.md
pympc-quadruped/linear_mpc/: gait.py  leg_controller.py  mpc.py  slope_mpc.py  swing_foot_trajectory_generator.py
pympc-quadruped/scripts/: demo_push_test.py  demo_push_test_trajectory.py  eval_mpc_go2.py  go2_mpc.py  push_test_go2.py
(+142 files in other folders)
